--- a/TestApi/deployment.yaml
+++ b/TestApi/deployment.yaml
@@ -1,21 +1,37 @@
-apiVersion: apps/v1
+---
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: testapi
+  labels:
+    app: testapi
+    visualize: "true"
 spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: testapi
+  replicas: 1
   template:
     metadata:
       labels:
         app: testapi
+        visualize: "true"
     spec:
       containers:
       - name: testapi
-        image: testapi
-        imagePullPolicy: Never
+        image: testapi:v1
         ports:
-          - containerPort: 5000
-            name: api-port
+        - name: web
+          containerPort: 5555
+          hostPort: 5555
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: testapi
+spec:
+  selector:
+    app: testapi
+  ports:
+  - name: http
+    port: 5555
+    targetPort: 5555
+    nodePort: 30555
+  type: NodePort
