--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,4 +27,9 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'amirelgamaml'
+        repository: 'testapi'
+        command: 'push'
     
