--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -31,7 +31,7 @@ stages:
     - task: Docker@2
       displayName: push an image
       inputs:
-        containerRegistry: 'amirelgamaml'
+        containerRegistry: 'amirelgammal'
         repository: 'testapi'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
