--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,37 +1,77 @@
-# Docker
-
-# Build a Docker image 
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
-trigger:
-- master
-
-resources:
-- repo: self
-
 variables:
-  tag: '$(Build.BuildId)'
+  solution: '**/*.sln'
+  buildConfiguration: 'Release'
+  imgTage: '$(Build.BuildId)'
+  projects: '**/*.csproj'
+  assemblyVersion : '1.0.0'
 
 stages:
-- stage: Build
-  displayName: Build image
-  jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
+- stage: ServiceCICD
+  displayName: Service CI/CD
+  jobs:
+  - job: BuildAndTestSolutionAndPublishBuildArtifacts
+    displayName: Build and test solution and publish artifacts
+    pool: 'Hosted Ubuntu 1604'
+
     steps:
-    - task: Docker@2
-      displayName: Build an image
+    - task: NuGetToolInstaller@0
+
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet restore'
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        command: 'restore'
+        projects: $(projects)
+
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet build'
+      inputs:
+        command: 'build'
+        projects: $(projects)
+        arguments: '--configuration $(BuildConfiguration) --no-restore /p:AssemblyVersion=$(assemblyVersion).$(imgTage)'
+
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet test'
+      inputs:
+        command: 'test'
+        projects: '**/*Tests/*.csproj'
+        arguments: '--configuration $(BuildConfiguration) --no-build'
+        publishTestResults: true
+
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet publish'
+      inputs:
+        command: 'publish'
+        publishWebProjects: false
+        projects: $(projects)
+        arguments: '--configuration $(BuildConfiguration) --no-build --output $(build.artifactstagingdirectory)' # could use Build.BinariesDirectory as output
+        zipAfterPublish: false
+
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish Build Artifacts'
+      inputs:
+        path: $(build.artifactstagingdirectory)
+        artifact: drop
+
+  - job: CreateDockerImage
+    displayName: Build and Push Docker image
+    pool: 'Hosted Ubuntu 1604'
+    dependsOn: BuildAndTestSolutionAndPublishBuildArtifacts
+    condition: eq(variables['Build.SourceBranch'], 'refs/heads/master') # if master branch
+
+    steps:
+    - task: DownloadPipelineArtifact@2
+      displayName: 'Download Build Artifacts'
+      inputs:
+        artifact: drop
+        targetPath: '$(Build.SourcesDirectory)/publish'
+
     - task: Docker@2
-      displayName: push an image
+      displayName: 'Docker build & push'
       inputs:
         containerRegistry: 'amirelgammal'
-        repository: 'testapi'
+        repository: 'amirelgammal/testapi'
         command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
+        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)/publish/TestApi/'
+        tags: |
+          $(imgTage)
