--- a/TestApi/deployment.yaml
+++ b/TestApi/deployment.yaml
@@ -1,37 +1,21 @@
----
-apiVersion: extensions/v1beta1
+
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: testapi
+  name: testapp
   labels:
-    app: testapi
-    visualize: "true"
+    app: testapp
 spec:
-  replicas: 1
+  replicas: 2
+  selector:
+    matchLabels:
+      app: testapp
   template:
     metadata:
       labels:
-        app: testapi
-        visualize: "true"
+        app: testapp
     spec:
       containers:
-      - name: testapi
-        image: testapi:v1
+      - name: amirelgammal/testapp
         ports:
-        - name: web
-          containerPort: 5555
-          hostPort: 5555
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: testapi
-spec:
-  selector:
-    app: testapi
-  ports:
-  - name: http
-    port: 5555
-    targetPort: 5555
-    nodePort: 30555
-  type: NodePort
+        - containerPort: 80
