--- a/TestApi/service.yaml
+++ b/TestApi/service.yaml
@@ -1,15 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: testapi
-  labels:
-    app: testapi
+  name: testapp
 spec:
   type: LoadBalancer
-  selector:
-    app: testapi
   ports:
-  - port: 5000
-    name: http
-    targetPort: 5000
-    nodePort: 5000
+  - port: 80
+  selector:
+    app: testapp
