--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,9 +21,12 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: 'Docker build & push'
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: 'amirelgammal'
+        repository: 'amirelgammal/testapi'
+        command: 'buildAndPush'
+        Dockerfile: '$(Build.SourcesDirectory)/TestApi/Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)/publish/TestApi/'
         tags: |
-          $(tag)
+          $(imgTage)
