Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'amirelgammal'
-        repository: 'testapi'
+        repository: 'amirelgammal/testapi'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
 
