--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: {{ include "api.fullname" . }}
   labels:
-    app: {{ .Values.label.name }}
+    {{- include "api.labels" . | nindent 4 }}
 spec:
-  ports:
-  - port: {{ .Values.service.port}}
-    protocol: TCP
-    targetPort: {{ .Values.container.port }}
-  selector:
-    app: {{ .Values.label.name }}
   type: {{ .Values.service.type }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "api.selectorLabels" . | nindent 4 }}
