--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: real-fileserver
+  name: fileserver
 spec:
   selector:
       matchLabels:
