--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "api.fullname" . }}
+  name: {{ .Release.Name }}-service
   labels:
-    {{- include "api.labels" . | nindent 4 }}
+    app: {{ .Values.label.name }}
 spec:
-  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+  - port: {{ .Values.service.port}}
+    protocol: TCP
+    targetPort: {{ .Values.container.port }}
   selector:
-    {{- include "api.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.label.name }}
+  type: {{ .Values.service.type }}
