--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: webapi
-          image: testapi:v1
+          image: amirelgammal/webapi:v1
           ports:
             - containerPort: 80
           env:
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
         - name: fileserver
-          image: fileserver:v1
+          image: amirelgammal/nginx:v1
           ports:
             - containerPort: 80
   strategy:
